Fix issue to class  menu-button for all pages. Change images and add alt description

--- a/about-us.html
+++ b/about-us.html
@@ -26,7 +26,7 @@
         </div>
         <input id="menu-toggle" type="checkbox">
         <label class='menu-button-container' for="menu-toggle">
-            <div class='menu-button'></div>
+            <a class='menu-button'></a>
         </label>
         <ul class="menu">
             <li>
@@ -45,7 +45,7 @@
 
     <section class="main-bg ">
         <div class="image-left">
-            <img src="assets/images/image-about.jpg" width="600" height="400" alt="">
+            <img src="assets/images/image-about.jpg" width="600" height="400" alt="girl-in-red-dress-playing-a-wooden-blocks">
         </div>
 
         <div class="right-about">
