--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <input id="menu-toggle" type="checkbox">
         <label class='menu-button-container' for="menu-toggle">
-            <div class='menu-button'></div>
+            <a class='menu-button'></a>
         </label>
         <ul class="menu">
             <li class="active">
@@ -49,7 +49,7 @@
 
     <section class="main-bg">
         <div class="image-left">
-            <img src="assets/images/image-left.jpg" width="600" height="400" alt="">
+            <img src="assets/images/image-left.jpg" width="600" height="400" alt="top-view-of-woman-with-a-child-solving-puzzles">
         </div>
 
         <div class="right-about">
@@ -107,7 +107,7 @@
                 </p>
             </div>
             <div class="services-image">
-                <img src="assets/images/image-center-1.jpg" width="600" height="400" alt="">
+                <img src="assets/images/image-center-1.jpg" width="400" height="600" alt="girl-in-gray-dress-and-gray-tights-playing-on-white-rug-with-woman-in-white-sweater">
             </div>
         </div>
     </section>
@@ -162,7 +162,7 @@
                 </p>
             </div>
             <div class="services-image">
-                <img src="assets/images/image-center-2.jpg" width="400" height="600" alt="">
+                <img src="assets/images/image-center-2.jpg" width="400" height="600" alt="mother-and-son-using-educational-toys">
             </div>
         </div>
     </section>
