--- a/katerina.html
+++ b/katerina.html
@@ -27,7 +27,7 @@
         </div>
         <input id="menu-toggle" type="checkbox">
         <label class='menu-button-container' for="menu-toggle">
-            <div class='menu-button'></div>
+            <a class='menu-button'></a>
         </label>
         <ul class="menu">
             <li>
