Change image to test cv-logo images to our-team section, (not showing on deployed link)

--- a/about-us.html
+++ b/about-us.html
@@ -70,7 +70,7 @@
             <div class="our-team">
                 <div class="our-team-1 our-team-bg our-team-bg-sm">
                     <div>
-                        <img src="/assets/images/logo-image.png" alt="logo"  class="cv-logo">
+                        <img src="/assets/images/image-about.jpg" alt="logo"  class="cv-logo">
                     </div>
 
                     <div class="our-team-link">
