--- a/about-us.html
+++ b/about-us.html
@@ -69,8 +69,8 @@
         <div class="our-team-inner">
             <div class="our-team">
                 <div class="our-team-1 our-team-bg our-team-bg-sm">
-                    <div>
-                        <img src="/assets/images/logo-image.png" alt="logo"  class="cv-logo">
+                    <div class="cv-logo">
+                        <img src="assets/images/logo-image.png" alt="logo">
                     </div>
 
                     <div class="our-team-link">
@@ -84,7 +84,7 @@
             <div class="our-team">
                 <div class="our-team-2 our-team-bg our-team-bg-sm">
                     <div class="cv-logo">
-                        <img src="/assets/images/logo-image.png" alt="logo">
+                        <img src="assets/images/logo-image.png" alt="logo">
                     </div>
 
                     <div class="our-team-link">
@@ -99,7 +99,7 @@
             <div class="our-team">
                 <div class="our-team-3 our-team-bg our-team-bg-sm">
                     <div class="cv-logo">
-                        <img src="/assets/images/logo-image.png" alt="logo">
+                        <img src="assets/images/logo-image.png" alt="logo">
                     </div>
 
                     <div class="our-team-link">
@@ -113,7 +113,7 @@
             <div class="our-team">
                 <div class="our-team-4 our-team-bg our-team-bg-sm">
                     <div class="cv-logo">
-                        <img src="/assets/images/logo-image.png" alt="logo">
+                        <img src="assets/images/logo-image.png" alt="logo">
                     </div>
 
                     <div class="our-team-link">
