Add missing target in social likns to footer

--- a/maria.html
+++ b/maria.html
@@ -95,11 +95,11 @@
                                 class="fa-brands fa-twitter"></i></a>
                     </li>
                     <li>
-                        <a href="https://instagram.com" aria-label="Visit our Instagram page"><i
+                        <a href="https://instagram.com" target="_blank" aria-label="Visit our Instagram page"><i
                                 class="fa-brands fa-instagram"></i></a>
                     </li>
                     <li>
-                        <a href="https://youtube.com" aria-label="Visit our Youtube page"><i
+                        <a href="https://youtube.com" target="_blank" aria-label="Visit our Youtube page"><i
                                 class="fa-brands fa-youtube"></i></a>
                     </li>
                 </ul>
