Update facebook link in social section to footer

--- a/katerina.html
+++ b/katerina.html
@@ -89,7 +89,7 @@
             <div class="social">
                 <ul>
                     <li>
-                        <a href="https://facebook.com" target="_blank" aria-label="Visit our Facebook page"><i
+                        <a href="https://www.facebook.com/profile.php?id=100087858451493" target="_blank" aria-label="Visit our Facebook page"><i
                                 class="fa-brands fa-facebook"></i></a>
                     </li>
                     <li>
