Fix code structure

--- a/about-us.html
+++ b/about-us.html
@@ -8,7 +8,6 @@
     <meta name="description" content="Center for Special Treatment">
     <meta name="keywords"
         content="simeio therapy, special treatment, speech therapy, occupational therapy, parental counseling, dyslexia, autism, london, uk">
-
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Simeio Therapy | About Us</title>
 </head>
@@ -45,9 +44,9 @@
 
     <section class="main-bg ">
         <div class="image-left">
-            <img src="assets/images/image-about.jpg" width="600" height="400" alt="girl-in-red-dress-playing-a-wooden-blocks">
+            <img src="assets/images/image-about.jpg" width="600" height="400"
+                alt="girl-in-red-dress-playing-a-wooden-blocks">
         </div>
-
         <div class="right-about">
             <h2>Welcome to the Center for Special Treatments "Simeio"</h2>
             <p>
@@ -58,23 +57,19 @@
                 journey.
             </p>
         </div>
-
     </section>
 
     <!-- Our team-->
 
     <section class="our-team-container">
         <h2>Our Team</h2>
-
         <div class="our-team-inner">
             <div class="our-team">
                 <div class="our-team-1 our-team-bg our-team-bg-sm">
                     <div class="cv-logo">
                         <img src="assets/images/logo-image.png" alt="logo">
                     </div>
-
                     <div class="our-team-link">
-
                         <h3>Maria Tsimourdagka</h3>
                         <p>Speech Therapist</p>
                         <a href="maria.html">View full profile</a>
@@ -86,14 +81,11 @@
                     <div class="cv-logo">
                         <img src="assets/images/logo-image.png" alt="logo">
                     </div>
-
                     <div class="our-team-link">
-
                         <h3>Aggeliki Teligiannidou</h3>
                         <p>Speech Therapist</p>
                         <a href="gelly.html">View full profile</a>
                     </div>
-
                 </div>
             </div>
             <div class="our-team">
@@ -101,9 +93,7 @@
                     <div class="cv-logo">
                         <img src="assets/images/logo-image.png" alt="logo">
                     </div>
-
                     <div class="our-team-link">
-
                         <h3>Elena Koundourou</h3>
                         <p>Occupational Therapist</p>
                         <a href="elena.html">View full profile</a>
@@ -115,9 +105,7 @@
                     <div class="cv-logo">
                         <img src="assets/images/logo-image.png" alt="logo">
                     </div>
-
                     <div class="our-team-link">
-
                         <h3>Katerina Gkesou</h3>
                         <p>Occupational Therapist</p>
                         <a href="katerina.html">View full profile</a>
@@ -132,8 +120,8 @@
             <div class="social">
                 <ul>
                     <li>
-                        <a href="https://www.facebook.com/profile.php?id=100087858451493" target="_blank" aria-label="Visit our Facebook page"><i
-                                class="fa-brands fa-facebook"></i></a>
+                        <a href="https://www.facebook.com/profile.php?id=100087858451493" target="_blank"
+                            aria-label="Visit our Facebook page"><i class="fa-brands fa-facebook"></i></a>
                     </li>
                     <li>
                         <a href="https://twitter.com" target="_blank" aria-label="Visit our Twitter page"><i
@@ -149,17 +137,13 @@
                     </li>
                 </ul>
             </div>
-
             <div class="map-footer">
-
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d757.3097164575439!2d22.9523887!3d40.6025532!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14a8392823fc16bb%3A0x88798ef740c4f290!2sSpeech%20Therapy%20center!5e0!3m2!1sen!2suk!4v1679087569116!5m2!1sen!2suk"
                     width="400" height="150" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade" title="pinpoint-map">
                 </iframe>
-
             </div>
-
             <div id="address">
                 <h2><a href="contact.html">Contact Us</a></h2>
                 <h3>Address</h3>
@@ -171,11 +155,9 @@
             <p>COPYRIGHT <i class="fa-regular fa-copyright"></i> 2023 <a href="https://www.simeiotherapy.gr"
                     target="_blank">Κέντρο Ειδικών Θεραπειών “σημείο”</a></p>
         </div>
-
     </footer>
 
     <!--Font awesome script-->
-
     <script src="https://kit.fontawesome.com/cdf0a3356f.js" crossorigin="anonymous"></script>
 
 </body>
