--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,6 @@
     <meta name="description" content="Center for Special Treatment">
     <meta name="keywords"
         content="simeio therapy, special treatment, speech therapy, occupational therapy, parental counseling, dyslexia, autism, london, uk">
-
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Simeio Therapy | Contact us</title>
 </head>
@@ -45,51 +44,31 @@
         <div class="form-container-bg">
             <div class="form-container-mid">
                 <div class="form-container">
-
-
                     <form action="submit-form.html" target="_blank" method="GET" class="signup-form">
-
                         <div class="form-control form-first">
                             <label for="fname">First Name:<span class="required-field">*</span></label>
-
                             <input type="text" id="fname" name="first_name" class="text-input" required>
-
                         </div>
                         <div class="form-control">
                             <label for="lname">Last Name:<span class="required-field">*</span></label>
-
-
                             <input type="text" id="lname" name="last_name" class="text-input" required>
-
                         </div>
                         <div class="form-control">
                             <label for="email">Email Address:<span class="required-field">*</span></label>
-
-
                             <input type="email" id="email" name="email_address" class="text-input" required>
-
                         </div>
                         <div class="form-control">
                             <label for="cnumber">Contact Number:<span class="required-field">*</span></label>
-
-
                             <input type="number" id="cnumber" name="contact_number" class="text-input" required>
-
                         </div>
                         <div class="form-control">
                             <label for="subject">Subject:<span class="required-field">*</span></label>
-
-
                             <input type="text" id="subject" name="subject_form" class="text-input subject" required>
-
                         </div>
                         <div class="form-control">
                             <label for="comments">Comments:<span class="required-field">*</span></label>
-
-
                             <textarea id="comments" cols="20" rows="5" maxlength="500" name="commnents_form"
                                 class="text-input" required></textarea>
-
                         </div>
                         <div>
                             <input type="submit" value="Submit" class="join-button">
@@ -105,15 +84,13 @@
         </div>
     </div>
 
-
-
     <footer>
         <div class="footer-container">
             <div class="social">
                 <ul>
                     <li>
-                        <a href="https://www.facebook.com/profile.php?id=100087858451493" target="_blank" aria-label="Visit our Facebook page"><i
-                                class="fa-brands fa-facebook"></i></a>
+                        <a href="https://www.facebook.com/profile.php?id=100087858451493" target="_blank"
+                            aria-label="Visit our Facebook page"><i class="fa-brands fa-facebook"></i></a>
                     </li>
                     <li>
                         <a href="https://twitter.com" target="_blank" aria-label="Visit our Twitter page"><i
@@ -129,17 +106,13 @@
                     </li>
                 </ul>
             </div>
-
             <div class="map-footer">
-
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d757.3097164575439!2d22.9523887!3d40.6025532!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14a8392823fc16bb%3A0x88798ef740c4f290!2sSpeech%20Therapy%20center!5e0!3m2!1sen!2suk!4v1679087569116!5m2!1sen!2suk"
                     width="400" height="150" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade" title="pinpoint-map">
                 </iframe>
-
             </div>
-
             <div id="address">
                 <h2><a href="contact.html">Contact Us</a></h2>
                 <h3>Address</h3>
@@ -151,11 +124,11 @@
             <p>COPYRIGHT <i class="fa-regular fa-copyright"></i> 2023 <a href="https://www.simeiotherapy.gr"
                     target="_blank">Κέντρο Ειδικών Θεραπειών “σημείο”</a></p>
         </div>
-
-        <!--Font awesome script-->
-
-        <script src="https://kit.fontawesome.com/cdf0a3356f.js" crossorigin="anonymous"></script>
     </footer>
+    
+    <!--Font awesome script-->
+    <script src="https://kit.fontawesome.com/cdf0a3356f.js" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
