--- a/gelly.html
+++ b/gelly.html
@@ -8,7 +8,6 @@
     <meta name="description" content="Center for Special Treatment">
     <meta name="keywords"
         content="simeio therapy, special treatment, speech therapy, occupational therapy, parental counseling, dyslexia, autism, london, uk">
-
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Simeio Therapy | About us | | Aggeliki Teligiannidou</title>
 </head>
@@ -17,7 +16,6 @@
     <!--Logo and navbar with links-->
 
     <header>
-
         <div>
             <a href="index.html">
                 <h1>
@@ -40,9 +38,6 @@
                 <a href="contact.html">Contact Us</a>
             </li>
         </ul>
-
-
-
     </header>
 
     <section class="cv-outer">
@@ -76,15 +71,13 @@
         </div>
     </section>
 
-
-
     <footer>
         <div class="footer-container">
             <div class="social">
                 <ul>
                     <li>
-                        <a href="https://www.facebook.com/profile.php?id=100087858451493" target="_blank" aria-label="Visit our Facebook page"><i
-                                class="fa-brands fa-facebook"></i></a>
+                        <a href="https://www.facebook.com/profile.php?id=100087858451493" target="_blank"
+                            aria-label="Visit our Facebook page"><i class="fa-brands fa-facebook"></i></a>
                     </li>
                     <li>
                         <a href="https://twitter.com" target="_blank" aria-label="Visit our Twitter page"><i
@@ -100,17 +93,13 @@
                     </li>
                 </ul>
             </div>
-
             <div class="map-footer">
-
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d757.3097164575439!2d22.9523887!3d40.6025532!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14a8392823fc16bb%3A0x88798ef740c4f290!2sSpeech%20Therapy%20center!5e0!3m2!1sen!2suk!4v1679087569116!5m2!1sen!2suk"
                     width="400" height="150" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade" title="pinpoint-map">
                 </iframe>
-
             </div>
-
             <div id="address">
                 <h2><a href="contact.html">Contact Us</a></h2>
                 <h3>Address</h3>
@@ -123,8 +112,8 @@
                     target="_blank">Κέντρο Ειδικών Θεραπειών “σημείο”</a></p>
         </div>
     </footer>
-    <!--Font awesome script-->
 
+    <!--Font awesome script-->
     <script src="https://kit.fontawesome.com/cdf0a3356f.js" crossorigin="anonymous"></script>
 
 </body>
