--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <meta name="description" content="Center for Special Treatment">
     <meta name="keywords"
         content="simeio therapy, special treatment, speech therapy, occupational therapy, parental counseling, dyslexia, autism, london, uk">
-
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Simeio Therapy</title>
 </head>
@@ -17,7 +16,6 @@
     <!--Logo and navbar with links-->
 
     <header>
-
         <div>
             <a href="index.html">
                 <h1>
@@ -40,18 +38,15 @@
                 <a href="contact.html">Contact Us</a>
             </li>
         </ul>
-
-
-
     </header>
 
     <!-- About us and Image-->
 
     <section class="main-bg">
         <div class="image-left">
-            <img src="assets/images/image-left.jpg" width="600" height="400" alt="top-view-of-woman-with-a-child-solving-puzzles">
+            <img src="assets/images/image-left.jpg" width="600" height="400"
+                alt="top-view-of-woman-with-a-child-solving-puzzles">
         </div>
-
         <div class="right-about">
             <h2>Welcome to the Center for Special Treatments "Simeio"</h2>
             <p>
@@ -62,13 +57,12 @@
                 journey.
             </p>
         </div>
-
     </section>
     <hr>
+
     <!--Services-->
 
     <section class="services-container">
-
         <h2>Services</h2>
         <div class="services">
             <div class="services-left-1">
@@ -107,7 +101,8 @@
                 </p>
             </div>
             <div class="services-image">
-                <img src="assets/images/image-center-1.jpg" width="400" height="600" alt="girl-in-gray-dress-and-gray-tights-playing-on-white-rug-with-woman-in-white-sweater">
+                <img src="assets/images/image-center-1.jpg" width="400" height="600"
+                    alt="girl-in-gray-dress-and-gray-tights-playing-on-white-rug-with-woman-in-white-sweater">
             </div>
         </div>
     </section>
@@ -133,9 +128,6 @@
                     of the child.
                 </p>
             </div>
-
-
-
             <div id="services-right-2">
                 <h3>Parental Counselling</h3>
                 <p>
@@ -162,7 +154,8 @@
                 </p>
             </div>
             <div class="services-image">
-                <img src="assets/images/image-center-2.jpg" width="400" height="600" alt="mother-and-son-using-educational-toys">
+                <img src="assets/images/image-center-2.jpg" width="400" height="600"
+                    alt="mother-and-son-using-educational-toys">
             </div>
         </div>
     </section>
@@ -172,8 +165,8 @@
             <div class="social">
                 <ul>
                     <li>
-                        <a href="https://www.facebook.com/profile.php?id=100087858451493" target="_blank" aria-label="Visit our Facebook page"><i
-                                class="fa-brands fa-facebook"></i></a>
+                        <a href="https://www.facebook.com/profile.php?id=100087858451493" target="_blank"
+                            aria-label="Visit our Facebook page"><i class="fa-brands fa-facebook"></i></a>
                     </li>
                     <li>
                         <a href="https://twitter.com" target="_blank" aria-label="Visit our Twitter page"><i
@@ -189,7 +182,6 @@
                     </li>
                 </ul>
             </div>
-
             <div class="map-footer">
 
                 <iframe
@@ -197,9 +189,7 @@
                     width="400" height="150" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade" title="pinpoint-map">
                 </iframe>
-
             </div>
-
             <div id="address">
                 <h2><a href="contact.html">Contact Us</a></h2>
                 <h3>Address</h3>
@@ -212,8 +202,8 @@
                     target="_blank">Κέντρο Ειδικών Θεραπειών “σημείο”</a></p>
         </div>
     </footer>
-    <!--Font awesome script-->
 
+    <!--Font awesome script-->
     <script src="https://kit.fontawesome.com/cdf0a3356f.js" crossorigin="anonymous"></script>
 
 </body>
