Fix issue with  logo image at the center of thank you page

--- a/submit-form.html
+++ b/submit-form.html
@@ -42,11 +42,11 @@
 
     <section class="submit-form-outer">
         <div class="submit-form">
-            <h3>Thank you, your form has been submited</h3>
+            <h2>Thank you, your form has been submited</h2>
         </div>
         <div class="return-home">
             <p>Click our logo to return to home page</p>
-            <div>
+            <div class="sub-form-logo">
                 <a href="index.html">
                     <img src="assets/images/logo-image.png" alt="Logo home button">
                 </a>
