Update class names to services section

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <section class="services-container">
         <h2>Services</h2>
         <div class="services">
-            <div class="services-left-1">
+            <div class="services-top-1">
                 <h3>Speech Therapy</h3>
                 <p>
                     Speech therapy is the science that has as its subject the study, research and application of
@@ -83,7 +83,7 @@
                     program.
                 </p>
             </div>
-            <div class="services-left-2">
+            <div class="services-top-2">
                 <h3>Occupational Therapy</h3>
                 <p>Occupational therapy could be defined as therapy through work (activity) but also therapy for work
                     (activity). Occupational therapy uses purposeful activity as a means of treatment. At the same time,
@@ -112,7 +112,7 @@
     <hr>
     <section class="services-container">
         <div class="services">
-            <div id="services-right-1">
+            <div class="services-bottom-1">
                 <h3>Parental Counselling</h3>
                 <p>
                     Parental counseling takes place between the parents and the psychologist / psychotherapist to
@@ -137,7 +137,7 @@
                     assessment of the treatment program.
                 </p>
             </div>
-            <div id="services-right-2">
+            <div class="services-bottom-2">
                 <h3>Occupational Therapy Robotics</h3>
                 <p>
                     Robotics is considered as an innovative activity that begins to enter dynamically and affect the
