--- a/about-us.html
+++ b/about-us.html
@@ -68,7 +68,7 @@
             <div class="our-team">
                 <div class="our-team-1 our-team-bg our-team-bg-sm">
                     <div class="cv-logo">
-                        <img src="assets/images/logo-image.png" alt="logo">
+                        <img src="assets/images/logo-image.png" alt="">
                     </div>
                     <div class="our-team-link">
                         <h3>Maria Tsimourdagka</h3>
@@ -80,7 +80,7 @@
             <div class="our-team">
                 <div class="our-team-2 our-team-bg our-team-bg-sm">
                     <div class="cv-logo">
-                        <img src="assets/images/logo-image.png" alt="logo">
+                        <img src="assets/images/logo-image.png" alt="">
                     </div>
                     <div class="our-team-link">
                         <h3>Aggeliki Teligiannidou</h3>
@@ -92,7 +92,7 @@
             <div class="our-team">
                 <div class="our-team-3 our-team-bg our-team-bg-sm">
                     <div class="cv-logo">
-                        <img src="assets/images/logo-image.png" alt="logo">
+                        <img src="assets/images/logo-image.png" alt="">
                     </div>
                     <div class="our-team-link">
                         <h3>Elena Koundourou</h3>
@@ -104,7 +104,7 @@
             <div class="our-team">
                 <div class="our-team-4 our-team-bg our-team-bg-sm">
                     <div class="cv-logo">
-                        <img src="assets/images/logo-image.png" alt="logo">
+                        <img src="assets/images/logo-image.png" alt="">
                     </div>
                     <div class="our-team-link">
                         <h3>Katerina Gkesou</h3>
