Update and style content to services section

--- a/index.html
+++ b/index.html
@@ -68,40 +68,30 @@
             <div class="services-top-1">
                 <h3>Speech Therapy</h3>
                 <p>
-                    Speech therapy is the science that has as its subject the study, research and application of
-                    scientific knowledge about Human Communication (verbal or not), Speech (oral, written) Speech,
-                    Voice, and their disorders, as well as swallowing and feeding disorders.
-                    Speech therapy contributes to the improvement of the linguistic, cognitive and communication
-                    skills of people of all ages who face difficulties that hinder them in daily activities.
-                    Child development is a normal process of progression from an early and lower level of
-                    functionality to a more complex one, such as that of adults. Although each child has its own
-                    rate of language development, there are some linguistic milestones, i.e. "indicators" that serve
-                    to highlight the level of functioning of the child in relation to the expected levels based on
-                    his age in various areas of the individual's functionality. . The deviation from these
-                    milestones may be an indication that we should visit a speech therapist to have an assessment
-                    done and if required to proceed with the intervention through an individualized treatment
-                    program.
+                    Speech therapy is the science that deals with speech, speaking voice and chewing-swallowing
+                    disorders in children and adults, whatever the cause of these disorders: neurological, developmental
+                    or functional. It aims at the development of extra-verbal and verbal communication, the clarity of
+                    speech and voice and the speech production of the hard of hearing. <a href="#">Read more</a>
                 </p>
             </div>
             <div class="services-top-2">
                 <h3>Occupational Therapy</h3>
-                <p>Occupational therapy could be defined as therapy through work (activity) but also therapy for work
-                    (activity). Occupational therapy uses purposeful activity as a means of treatment. At the same time,
-                    it is concerned, through it, that the individual is able to engage in all the activities that have
-                    meaning for him adequately. It is a science of rehabilitation where in a holistic way it aims at the
-                    autonomy and functionality of the individual. Pediatric occupational therapy The pediatric field is
-                    one of the main fields of occupation of occupational therapists in Greece. Play is a very important
-                    activity for children and is used therapeutically in occupational therapy. The most important
-                    purpose of pediatric occupational therapy is the successful involvement of children in school
-                    activities (such as attendance in the classroom, recess, reading at home, etc.), in recreational
-                    activities (such as playing on the playground, cycling, team building play, family activities, etc.)
-                    and autonomy (food, clothing, personal hygiene, etc.) according to the typical standards of each
-                    age. The above can be achieved either by improving some skills of the child that are lacking (such
-                    as sensory processing, concentration, gross and fine motor skills, visual-motor coordination,
-                    self-confidence, self-organization, etc.), or by adapting the environment or the activity to level
-                    of the child.
+                <p>
+                    Occupational therapy is a specialized science in the field of health, which improves skills of
+                    people with dysfunction in the areas of development.
                 </p>
-                
+                <h4>These areas concern:</h4>
+                <ul>
+                    <li>Self-service of the individual and his independence in activities of daily life such as feeding,
+                        clothing-shoes safety, movement, personal hygiene.
+                    <li>The productivity of the individual where his ability in the field of work is assessed. For the
+                        child, "work" is the game and his learning development. </li>
+                    <li>The person's mobility, where their ability to coordinate parts of the body (upper and lower
+                        limbs)
+                        with fine or gross mobility is mainly evaluated.</li>
+                    <li>The person's sensory skills where his ability to perceive his body (somatocognition) and how he
+                        perceives the body's relationship with the environment (kinaesthesia) is assessed.</li>
+                </ul>
             </div>
             <div class="services-image">
                 <img src="assets/images/image-center-1.jpg" width="400" height="600"
@@ -114,44 +104,22 @@
         <div class="services">
             <div class="services-bottom-1">
                 <h3>Parental Counselling</h3>
-                <p>
-                    Parental counseling takes place between the parents and the psychologist / psychotherapist to
-                    whom they are addressed. Counseling sessions discuss the issues that concern parents in relation
-                    to their child, family or their own role as parents. These issues may concern issues in a
-                    child's behavior, emotional difficulties, difficulties in socialization or difficulties faced by
-                    parents in their own role. Also, in the management of specific situations, such as a death or
-                    loss in the environment of the child, a serious illness that affects the daily life of the
-                    family and the child, the divorce of the parents or a traumatic event. Parental counseling
-                    depending on the situation may be the only intervention or be combined with the psychotherapy of
-                    the child or adolescent, as well as with other interventions, such as speech therapy and
-                    occupational therapy in the context of an overall therapeutic program.
-                    The aim in parental counseling is through the relationship that parents develop with the
-                    psychologist / psychotherapist to receive support in their role as parents, to get direction
-                    from the psychologist / psychotherapist in the management of specific issues, not through
-                    general advice but within a framework that takes into account the needs of the specific family
-                    and the specific child, to better understand the difficulties that their child may be facing and
-                    to give space to the development of a common attitude on the part of the parents that favors
-                    their cooperation.
-                    Depending on the circumstances, parental counseling may take place with one or both parents and
-                    the frequency of sessions may vary depending on the needs of the family and the therapist's
-                    assessment of the treatment program.
+                <p>Parent counseling takes place between the parents and the psychologist/psychotherapist to whom they
+                    turn. In the counseling sessions, the issues that concern the parents in relation to their child,
+                    the family or their own role as parents are discussed. These issues may concern issues in a child's
+                    behavior, emotional difficulties, difficulties in socialization or difficulties that parents face in
+                    their own role.
                 </p>
             </div>
             <div class="services-bottom-2">
-                <h3>Occupational Therapy Robotics</h3>
+                <h3>Special Education</h3>
                 <p>
-                    Robotics is considered as an innovative activity that begins to enter dynamically and affect the
-                    educational process. Occupational therapy through robotics is an occupational therapy
-                    intervention program that uses the activity of robotics as a therapeutic agent. During this
-                    intervention the child enters the process of building his robot and programming it to do some
-                    process. The objectives of the program are for the child to increase his construction skills,
-                    reduce his impulse, develop and improve his executive functions such as problem solving and
-                    working memory and increase the ability to cooperate. It is aimed at children mainly with
-                    attention deficit disorder with or without hyperactivity, with learning difficulties, with
-                    difficulties in practice skills and with difficulties in social interaction. It is a very
-                    pleasant way of occupational therapy intervention that motivates children to try harder. Through
-                    creation, the feeling of fulfillment is created which increases the self-esteem of the child and
-                    gives quality and satisfaction to his life.
+                    Special Education and Education is the set of educational services provided to students with
+                    confirmed special educational needs and with or without disabilities. With special education, an
+                    effort is made for the child to join society as a non-dependent but also productive member. Special
+                    education includes everything that is offered to the child and has an auxiliary role, something that
+                    must be given in the school context and throughout the child's school life.
+
                 </p>
             </div>
             <div class="services-image">
