--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     disorders in children and adults, whatever the cause of these disorders: neurological, developmental
                     or functional. It aims at the development of extra-verbal and verbal communication, the clarity of
                     speech and voice and the speech production of the hard of hearing. </p>
-                <p><a href="#">Read more</a></p>
+                <p><a href="speech-therapy.html">Read more</a></p>
             </div>
             <div class="services-top-2">
                 <h3>Occupational Therapy</h3>
@@ -92,7 +92,7 @@
                     <li>The person's sensory skills where his ability to perceive his body (somatocognition) and how he
                         perceives the body's relationship with the environment (kinaesthesia) is assessed.</li>
                 </ul>
-                <p><a href="#">Read more</a></p>
+                <p><a href="occupational-therapy.html">Read more</a></p>
             </div>
             <div class="services-image">
                 <img src="assets/images/image-center-1.jpg" width="400" height="600"
@@ -111,7 +111,7 @@
                     behavior, emotional difficulties, difficulties in socialization or difficulties that parents face in
                     their own role.
                 </p>
-                <p><a href="#">Read more</a></p>
+                <p><a href="parental-counselling.html">Read more</a></p>
             </div>
             <div class="services-bottom-2">
                 <h3>Special Education</h3>
@@ -122,7 +122,7 @@
                     education includes everything that is offered to the child and has an auxiliary role, something that
                     must be given in the school context and throughout the child's school life.
                 </p>
-                <p><a href="#">Read more</a></p>
+                <p><a href="special-education.html">Read more</a></p>
             </div>
             <div class="services-image">
                 <img src="assets/images/image-center-2.jpg" width="400" height="600"
