Add content to parental-counselling page and fix typo to speech-therapy page

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <!--Services-->
 
     <section class="services-container">
-        <h2>Services</h2>
+        <h2>Our Services</h2>
         <div class="services">
             <div class="services-top-1">
                 <h3>Speech Therapy</h3>
