--- a/speech-therapy.html
+++ b/speech-therapy.html
@@ -46,7 +46,7 @@
             <p>Speech therapy is the science that deals with speech, speaking voice and chewing-swallowing
                 disorders in children and adults, whatever the cause of these disorders: neurological, developmental
                 or functional. It aims at the development of extra-verbal and verbal communication, the clarity of
-                speech and voice and the speech production of the hard of hearing.
+                speech and voice and the speech production of the hard of hearing. </p>
 
                 <p>From the age of about eighteen months until the day the child goes to school, he first learns sounds,
                     then words, and finally to make sentences. But if he does not learn to speak properly, when he later
@@ -71,8 +71,7 @@
                     should seek expert advice.
                 </p>
                 <h4>Up to 12 months</h4>
-                <p>
-                    Baby reacts to sounds
+                <p>Baby reacts to sounds
                     Makes eye contact.
                     He recognizes his mother's voice.
                     He smiles when you talk to him.
