Add content to occuaptional-therapy page, fix typo to index

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <h4>These areas concern:</h4>
                 <ul>
                     <li>Self-service of the individual and his independence in activities of daily life such as feeding,
-                        clothing-shoes safety, movement, personal hygiene.
+                        clothing-shoes safety, movement, personal hygiene.</li>
                     <li>The productivity of the individual where his ability in the field of work is assessed. For the
                         child, "work" is the game and his learning development. </li>
                     <li>The person's mobility, where their ability to coordinate parts of the body (upper and lower
